tests/baselines/reference/classPropertyIsPublicByDefault.errors.txt
tests/cases/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts(3,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts(4,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts(8,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts(9,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts (4 errors) ====
    class C {
        x: string;
        get y() { return null; }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        set y(x) { }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        foo() { }
    
        static a: string;
        static get b() { return null; }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static set b(x) { }
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        static foo() { }
    }
    
    var c: C;
    c.x;
    c.y;
    c.y = 1;
    c.foo();
    
    C.a;
    C.b();
    C.b = 1;
    C.foo();